<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- JBitesGUI app strings -->
    <string name="app_name">JBitesGUI</string>
    <string name="general_title">JBitesGUI v1</string>
    <string name="main_title_head">JBitesGUI by n00bware</string>
    <string name="install_button">Click to install JakebitesMods v12</string>
    <string name="reboot">Reboot now</string>

    <!-- Status of downloads -->
    <string name="status_title">Status of downloads</string>
    <string name="status"> </string>

    <!-- ShowBuildProp.java strings -->
    <string name="showbuild_title">Do you know what is in your build.prop</string>
    <string name="showbuild_dialog">This is your /system/build.prop</string>
    <string name="showbuild_loading">Loading build.prop\u2026</string>
    <string name="showbuild_error">Error loading build.prop\u2026</string>
    <string name="showbuild_unknown">Unknown</string>
    <string name="showbuild_version">Version</string>
    <string name="showbuild_label">We should look because knowing is half the battle</string>

    <!-- Mount System -->
    <string name="pref_mount_title">Mount System</string>
    <string name="pref_mount_summary">Mount /system RO/RW</string>

    <!-- sysctl mod -->
    <string name="pref_sysctl_title">Sysctl Mod</string>
    <string name="pref_sysctl_summaryOn">Disable frequent clearing of VM cache</string>
    <string name="pref_sysctl_summaryOff">Enable frequent clearing of VM cache</string>

    <!-- cron mod -->
    <string name="pref_cron_title">Cron Mod</string>
    <string name="pref_cron_summaryOn">Disable droping VM cache twice a day</string>
    <string name="pref_cron_summaryOff">Enable droping VM cache twice a day</string>

    <!-- enable init.d -->
    <string name="pref_init_title">Enable init.d</string>
    <string name="pref_init_summaryOn">Enable init.d support</string>
    <string name="pref_init_summaryOff">Disable init.d support</string>

    <!-- overclocking -->
    <string name="pref_oc_title">Overclocking profiles</string>
    <string name="pref_oc_summary">enables overclocking</string>

    <!-- OPEN SOURCE Dialoge -->
    <string name="explain_wait_title">ROOT IS REQUIRED</string>
    <string name="explain_wait_summary">This is the Open Source GUI to JakebitesMods (github.com/n00bware/JBitesGUI) we have started installing JakebitesMods ...this will take a second please be patient</string>

    <!-- zipalign apps -->
    <string name="pref_zip_title">ZipAlign</string>
    <string name="pref_zip_summaryOn">Disable aligning all apps on boot</string>
    <string name="pref_zip_summaryOff">Enable aligning all apps on boot</string>

    <!-- logcat logging -->
    <string name="pref_log_title">LogCat</string>
    <string name="pref_log_summaryOn">Disable logcat on boot</string>
    <string name="pref_log_summaryOff">Enable logcat on boot</string>

    <!-- all mods -->
    <string name="pref_all_title">All In One</string>
    <string name="pref_all_summaryOn">Uninstall JakebitesMods</string>
    <string name="pref_all_summaryOff">Install JakebitesMods</string>

<!-- string template

    <string name=""></string>

-->

</resources>
