<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <PreferenceScreen android:key="install_pref" 
            android:title="@string/status_title"
            android:summary="@string/status" 
            android:enabled="true" />

        <PreferenceScreen android:key="showbuild" 
            android:title="@string/showbuild_title" android:summary="@string/showbuild_label">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.n00bware.jbitesgui"
                android:targetClass="com.n00bware.jbitesgui.ShowBuildProp" />
        </PreferenceScreen>

        <ListPreference android:key="mount_pref"
            android:dialogTitle="@string/pref_mount_title"
            android:title="@string/pref_mount_title" android:summary="@string/pref_mount_summary"
            android:entries="@array/entries_mount_explain"
            android:entryValues="@array/entries_mount" />

        <CheckBoxPreference android:key="sysctl_pref"
            android:title="@string/pref_sysctl_title"
            android:summaryOn="@string/pref_sysctl_summaryOn"
            android:summaryOff="@string/pref_sysctl_summaryOff" />

        <CheckBoxPreference android:key="cron_pref"
            android:title="@string/pref_cron_title"
            android:summaryOn="@string/pref_cron_summaryOn"
            android:summaryOff="@string/pref_cron_summaryOff" />

        <CheckBoxPreference android:key="init_pref"
            android:title="@string/pref_init_title"
            android:summaryOn="@string/pref_init_summaryOn"
            android:summaryOff="@string/pref_init_summaryOff"
            android:enabled="false" />

        <ListPreference android:key="oc_pref"
            android:dialogTitle="@string/pref_oc_title"
            android:title="@string/pref_oc_title" android:summary="@string/pref_oc_summary"
            android:entries="@array/entries_oc_explain"
            android:entryValues="@array/entries_oc" />

        <CheckBoxPreference android:key="zip_pref"
            android:title="@string/pref_zip_title"
            android:summaryOn="@string/pref_zip_summaryOn"
            android:summaryOff="@string/pref_zip_summaryOff" />

        <CheckBoxPreference android:key="log_pref"
            android:title="@string/pref_log_title"
            android:summaryOn="@string/pref_log_summaryOn"
            android:summaryOff="@string/pref_log_summaryOff" />

        <CheckBoxPreference android:key="all_pref"
            android:title="@string/pref_all_title"
            android:summaryOn="@string/pref_all_summaryOn"
            android:summaryOff="@string/pref_all_summaryOff" />

    </PreferenceCategory>
</PreferenceScreen>
